[package]
name = "solana_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-rpc-client = "1.18.16"
solana-sdk = "1.18.16"
solana-rpc-client-api = "1.18.16"           # Solana Client Common Utilities
solana-transaction-status = "1.18.16"           # Solana transaction status types